objects/sfdatagenerator__Data_Generation__c.object
<CustomObject>
    <description>Instances where data is generated. Used to be able to delete records that were previously generated.</description>
    <fields>
        <fullName>sfdatagenerator__Batch_IDs__c</fullName>
        <description>a list of batch IDs so we can update the generation status</description>
        <label>Batch IDs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sfdatagenerator__Configuration__c</fullName>
        <description>The saved JSON configuration of the generation for reuse.</description>
        <label>Configuration</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sfdatagenerator__Error_Count__c</fullName>
        <label>Error Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sfdatagenerator__Objects__c</fullName>
        <label>Objects</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sfdatagenerator__Records__c</fullName>
        <label>Records</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sfdatagenerator__deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>deleted</label>
        <type>Checkbox</type>
    </fields>
    <label>Data Generation</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Data Generation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Generations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>